--- a/src/SPA/SPA.css
+++ b/src/SPA/SPA.css
@@ -1,43 +1,75 @@
 @font-face {
-    font-family: "Nexa";
-    src: local(url(../assets/fonts/Nexa-ExtraLight.ttf)) format(truetype);
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Nexa";
+  src: local(url(../assets/fonts/Nexa-ExtraLight.ttf)) format(truetype);
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-    font-family: "Nexa", "Arial";
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    padding: 0;
-    margin: 0;
-    background-image: linear-gradient(#003e57, #003ec4);
+  font-family: "Nexa", "Arial";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+  background-image: linear-gradient(#003e57, #003ec4);
 }
 
 form {
-    padding: 20px;
-    background-color: #6b3894;
-    width: 400px;
-    border-radius: 20px;
+  padding: 20px;
+  background-color: #6b3894;
+  width: 400px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
-    color: #e7fffc;
+  color: #e7fffc;
 }
 p {
-    color: #d9e9ff;
+  color: #d9e9ff;
 }
 a {
-    color: #f8df51;
-    text-decoration: none;
+  color: #f8df51;
+  text-decoration: none;
 }
-a:hover{
-    text-decoration: underline;
-    cursor: pointer;
+a:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
-#res{
-    color: #f8df51;
+#res {
+  color: #f8df51;
+}
+label {
+  color: #d9e9ff;
+}
+input {
+  margin: 10px 0;
+  background-color: #dcdcdc;
+  border: none;
+  outline: none;
+  padding: 10px;
+  border-radius: 7px;
+}
+select {
+  margin: 5px 0 0 5px;
+  background-color: #dcdcdc;
+  padding: 10px;
+  border-radius: 7px;
+}
+button {
+  background-color: #509ab8;
+  outline: none;
+  border: none;
+  padding: 20px;
+  border-radius: 10px;
+  color: #d9e9ff;
+  font-size: large;
+}
+button:hover {
+  background-color: #d296fa;
+  transition: 500ms;
 }
